--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write resources/vue/src"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.14.7",
     "@vueuse/core": "^11.2.0",
     "@vueuse/head": "^2.0.0",
     "class-variance-authority": "^0.7.0",
@@ -23,9 +24,11 @@
     "radix-vue": "^1.9.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
     "vue-i18n": "^10.0.4",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.8.0",
@@ -48,6 +51,7 @@
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
+    "simple-abortable-promise": "^1.1.1",
     "tailwindcss": "^3.4.14",
     "typescript": "~5.6.3",
     "unplugin-auto-import": "^0.18.3",
